--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -91,140 +91,142 @@
 		  <div class="collapse navbar-collapse body" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 			  <li class="nav-item dropdown active">
-				<a class="nav-link dropdown-toggle font-weight-bold main-menu-buttons-font" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> {% trans "GETTING STARTED WITH CITIZEN SCIENCE" %} </a>
+				<a class="nav-link dropdown-toggle font-weight-bold main-menu-buttons-font" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{% trans "GETTING STARTED WITH CITIZEN SCIENCE" %}</a>
 					<div class="dropdown-menu main-menu-buttons header-main-menu-body" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item font-weight-bold" href="#">What is Citizen Science? </a>
+						<a class="dropdown-item font-weight-bold" href="#">{% trans "What is Citizen Science?" %}</a>
 						<div class="dropdown-divider"></div>
 							<ul>
 								<li class="nav-item dropdown">
-									<a class="dropdown-item" href="#">Swedish Citizen Science </a>
+									<a class="dropdown-item" href="#">{% trans "Swedish Citizen Science" %}</a>
 								</li>
 							</ul>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item font-weight-bold" href="#">Case Studies</a>
+						<a class="dropdown-item font-weight-bold" href="#">{% trans "Case Studies" %}</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item font-weight-bold" href="#">FAQ</a>
+						<a class="dropdown-item font-weight-bold" href="#">{%trans "FAQ" %}</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item font-weight-bold" href="#">Additional Resources</a>
+						<a class="dropdown-item font-weight-bold" href="#">{%trans "Additional Resources" %}</a>
 						<div class="dropdown-divider"></div>
 					</div>
 			  </li>
 			  <li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle font-weight-bold main-menu-buttons-font" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">  {% trans "CITIZEN SCIENCE IN PRACTICE" %} </a>
 					<div class="dropdown-menu main-menu-buttons header-main-menu-body" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item font-weight-bold" href="#">Data Standards and Quality</a>
+						<a class="dropdown-item font-weight-bold" href="#">{%trans "Data Standards and Quality" %}</a>
 						<div class="dropdown-divider"></div>
 						<ul>
 							<li nav-item dropdown>
-								<a class="dropdown-item" href="#">Methods</a>
+								<a class="dropdown-item" href="#">{%trans "Methods" %}</a>
 							</li>
 							<div class="dropdown-divider"></div>
 							<li nav-item dropdown>
-								<a class="dropdown-item" href="#">Visual of Papers and Themes</a>
+								<a class="dropdown-item" href="#">{%trans "Visual of Papers and Themes" %}</a>
 							</li>
 						</ul>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item font-weight-bold" href="#">Technology</a>
+						<a class="dropdown-item font-weight-bold" href="#">{%trans "Technology" %}</a>
 						<div class="dropdown-divider"></div>
 							<ul>
 								<li nav-item dropdown>
-									<a class="dropdown-item" href="#">Methods</a>
+									<a class="dropdown-item" href="#">{%trans "Methods" %}</a>
 								</li>
 								<div class="dropdown-divider"></div>
 								<li nav-item dropdown>
-									<a class="dropdown-item" href="#">Visual of Papers and Themes</a>
+									<a class="dropdown-item" href="#">{%trans "Visual of Papers and Themes" %}</a>
 								</li>
 							</ul>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item font-weight-bold" href="#">Ethics</a>
+						<a class="dropdown-item font-weight-bold" href="#">{%trans "Ethics" %}</a>
 						<div class="dropdown-divider"></div>
 							<ul>
 								<li nav-item dropdown>
-									<a class="dropdown-item" href="#">Methods</a>
+									<a class="dropdown-item" href="#">{%trans "Methods" %}</a>
 								</li>
 								<div class="dropdown-divider"></div>
 								<li nav-item dropdown>
-									<a class="dropdown-item" href="#">Visual of Papers and Themes</a>
+									<a class="dropdown-item" href="#">{%trans "Visual of Papers and Themes" %}</a>
 								</li>
 							</ul>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item font-weight-bold" href="#">Communications</a>
+						<a class="dropdown-item font-weight-bold" href="#">{%trans "Communications" %}</a>
 						<div class="dropdown-divider"></div>
 							<ul>
 								<li nav-item dropdown>
-									<a class="dropdown-item" href="#">Methods</a>
+									<a class="dropdown-item" href="#">{%trans "Methods" %}</a>
 								</li>
 								<div class="dropdown-divider"></div>
 								<li nav-item dropdown>
-									<a class="dropdown-item" href="#">Visual of Papers and Themes</a>
+									<a class="dropdown-item" href="#">{%trans "Visual of Papers and Themes" %}</a>
 								</li>
 							</ul>
 						<div class="dropdown-divider"></div>
 				</div>
-			  </li>
+			</li>
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle font-weight-bold main-menu-buttons-font" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> {% trans "CITIZEN SCIENCE IN SWEDEN" %} </a>
 				<div class="dropdown-menu main-menu-buttons header-main-menu-body" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item font-weight-bold" href="#">Citizen Science Projects</a>
+					<a class="dropdown-item font-weight-bold" href="#">{%trans "Citizen Science Projects" %}</a>
 					<div class="dropdown-divider"></div>
 						<ul>
 							<li nav-item dropdown>
-								<a class="dropdown-item" href="#">Map of Projects</a>
+								<a class="dropdown-item" href="#">{%trans "Map of Projects" %}</a>
 							</li>
 							<div class="dropdown-divider"></div>
 							<li nav-item dropdown>
-								<a class="dropdown-item" href="#">Add your Projects</a>
+								<a class="dropdown-item" href="#">{%trans "Add your Projects" %}</a>
 							</li>
 						</ul>
 					<div class="dropdown-divider"></div>
-					<a class="dropdown-item font-weight-bold" href="#">Predifined List of Projects</a>
+					<a class="dropdown-item font-weight-bold" href="#">{%trans "Predifined List of Projects" %}</a>
 					<div class="dropdown-divider"></div>
 						<ul>
 							<li nav-item dropdown>
-								<a class="dropdown-item" href="#">Funders</a>
+								<a class="dropdown-item" href="#">{%trans "Funders" %}</a>
 							</li>
 							<div class="dropdown-divider"></div>
 							<li nav-item dropdown>
-								<a class="dropdown-item" href="#">Associated Affiliates</a>
+								<a class="dropdown-item" href="#">{%trans "Associated Affiliates" %}</a>
 							</li>
 							<div class="dropdown-divider"></div>
 							<li nav-item dropdown>
-								<a class="dropdown-item" href="#">Reserchers</a>
+								<a class="dropdown-item" href="#">{%trans "Reserchers" %}</a>
 							</li>
 						</ul>
 					<div class="dropdown-divider"></div>
-					<a class="dropdown-item font-weight-bold" href="#">Proudacts</a>
+					<a class="dropdown-item font-weight-bold" href="#">{%trans "Proudacts" %}</a>
 					<div class="dropdown-divider"></div>
 						<ul>
 							<li nav-item dropdown>
-								<a class="dropdown-item" href="#">Papers</a>
+								<a class="dropdown-item" href="#">{%trans "Papers" %}</a>
 							</li>
 							<div class="dropdown-divider"></div>
 							<li nav-item dropdown>
-								<a class="dropdown-item" href="#">Policy</a>
+								<a class="dropdown-item" href="#">{%trans "Policy" %}</a>
 							</li>
 							<div class="dropdown-divider"></div>
 							<li nav-item dropdown>
-								<a class="dropdown-item" href="#">Data</a>
+								<a class="dropdown-item" href="#">{%trans "Data" %}</a>
 							</li>
 							<div class="dropdown-divider"></div>
 							<li nav-item dropdown>
-								<a class="dropdown-item" href="#">Broader Impacts</a>
+								<a class="dropdown-item" href="#">{%trans "Broader Impacts" %}</a>
 							</li>
 					</ul>
 				<div class="dropdown-divider"></div>
 				</div>
 			</li>
-			<form class="form-inline">
-				<!-- Actual search box -->
-				<div class="form-group has-search">
-					<svg class="form-control-feedback" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-					  <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z" clip-rule="evenodd"/>
-					  <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z" clip-rule="evenodd"/>
-					</svg>
-					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-				</div>
-			</form>
+
+		</ul>
+		<form class="form-inline ml-auto">
+			<!-- Actual search box -->
+			<div class="form-group has-search">
+				<svg class="form-control-feedback" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+				  <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z" clip-rule="evenodd"/>
+				  <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z" clip-rule="evenodd"/>
+				</svg>
+				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+			</div>
+		</form>
 		  </div>
 		</nav>
 
