--- a/ArcsSystem/templates/account/login.html
+++ b/ArcsSystem/templates/account/login.html
@@ -7,40 +7,67 @@
 
 {% block content %}
 
-<h1>{% trans "Sign In" %}</h1>
+<div class="container-fluid">
+    <div class="row ">
+        <div class="col login-form">
+            <div class="row">
+                <div class="col d-flex justify-content-center align-items-center">
+                    <h1>{% trans "Sign In" %}</h1>
+                </div>
+            </div>
 
-{% get_providers as socialaccount_providers %}
+            <div class="row">
+                <div class="col d-flex justify-content-center align-items-center">
+                    {% get_providers as socialaccount_providers %}
 
-{% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}TestPlease sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+                    {% if socialaccount_providers %}
+                    <p>{% blocktrans with site.name as site_name %}TestPlease sign in with one
+                    of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+                    for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+                </div>
+            </div>
 
-<div class="socialaccount_ballot">
+            <div class="row">
+                <div class="col d-flex justify-content-center align-items-center">
+                    <div class="socialaccount_ballot">
+                          <ul class="socialaccount_providers">
+                            {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+                          </ul>
+                          <div class="login-or">{% trans 'or' %}</div>
+                    </div>
+                </div>
+            </div>
 
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
+            <div class="row">
+                <div class="col d-flex justify-content-center align-items-center">
+                    {% include "socialaccount/snippets/login_extra.html" %}
+                    {% else %}
+                    <p>{% blocktrans %}If you have not created an account yet, then please
+                    <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+                    {% endif %}
+                </div>
+            </div>
 
-  <div class="login-or">{% trans 'or' %}</div>
+            <div class="row">
+                <div class="col d-flex justify-content-center align-items-center">
+                    <form class="login" method="POST" action="{% url 'account_login' %}">
+                      {% csrf_token %}
+                      {{ form.as_p }}
+                      {% if redirect_field_value %}
+                      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                      {% endif %}
+                      <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                      <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+                    </form>
+                </div>
 
+            </div>
+
+
+        </div>
+    </div>
 </div>
 
-{% include "socialaccount/snippets/login_extra.html" %}
 
-{% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-{% endif %}
-
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-</form>
 
 {% endblock %}
