--- a/ArcsSystem/templates/staticpages/main-page.html
+++ b/ArcsSystem/templates/staticpages/main-page.html
@@ -14,7 +14,7 @@
         <div class="col">
             <div class="row">
                 <div class="col">
-                    <img class="img-fluid" src="https://images.unsplash.com/photo-1568607689150-17e625c1586e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" />
+                    <img class="img-fluid" src="{% static "devplaceholder/sami-takarautio-UZOpP-YHe9Q-unsplash.jpg"%}" />
                 </div>
             </div>
             <div class="row">
@@ -43,13 +43,13 @@
                         </ol>
                       <div class="carousel-inner">
                         <div class="carousel-item active">
-                          <img class="d-block w-100" src="https://images.unsplash.com/photo-1569511166187-97eb6e387e19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1085&q=80" alt="First slide">
+                          <img class="d-block w-100" src="{% static "devplaceholder/blake-carpenter-JYMCHXVyUqQ-unsplash.jpg" %}" alt="First slide">
                         </div>
                         <div class="carousel-item">
-                          <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2020/04/30/18/38/hobby-5114150_1280.jpg" alt="Second slide">
+                          <img class="d-block w-100" src="{% static "devplaceholder/hobby-5114150_1920.jpg" %}" alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                          <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2020/05/02/15/18/rain-5121827_1280.jpg" alt="Third slide">
+                          <img class="d-block w-100" src="{% static "devplaceholder/library-438389_1920.jpg" %}" alt="Third slide">
                         </div>
                       </div>
                       <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
