--- a/ArcsSystem/templates/account/login.html
+++ b/ArcsSystem/templates/account/login.html
@@ -1,6 +1,7 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
+{% load static %}
 {% load account socialaccount %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
@@ -12,58 +13,35 @@
         <div class="col login-form">
             <div class="row">
                 <div class="col d-flex justify-content-center align-items-center">
-                    <h1>{% trans "Sign In" %}</h1>
+                    <p Helvetica-font>{% trans "Login to Medborgarforskning" %}</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col Helvetica-font d-flex justify-content-center align-items-center">
+                    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col Helvetica-font d-flex justify-content-center align-items-center">
+                    {% trans 'or' %}
                 </div>
             </div>
 
             <div class="row">
                 <div class="col d-flex justify-content-center align-items-center">
-                    {% get_providers as socialaccount_providers %}
-
-                    {% if socialaccount_providers %}
-                    <p>{% blocktrans with site.name as site_name %}TestPlease sign in with one
-                    of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-                    for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col d-flex justify-content-center align-items-center">
-                    <div class="socialaccount_ballot">
-                          <ul class="socialaccount_providers">
-                            {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-                          </ul>
-                          <div class="login-or">{% trans 'or' %}</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col d-flex justify-content-center align-items-center">
-                    {% include "socialaccount/snippets/login_extra.html" %}
-                    {% else %}
-                    <p>{% blocktrans %}If you have not created an account yet, then please
-                    <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-                    {% endif %}
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col d-flex justify-content-center align-items-center">
-                    <form class="login" method="POST" action="{% url 'account_login' %}">
+                    <form class="login Helvetica-font" method="POST" action="{% url 'account_login' %}">
                       {% csrf_token %}
                       {{ form.as_p }}
                       {% if redirect_field_value %}
                       <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                       {% endif %}
-                      <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-                      <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+                      <a class="button secondaryAction " href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                      <br>
+                      <button class="primaryAction" type="submit">{% trans "Login" %}</button>
                     </form>
                 </div>
-
             </div>
-
-
         </div>
     </div>
 </div>
@@ -71,3 +49,7 @@
 
 
 {% endblock %}
+
+{% block extra_head %}
+<script src="{% static 'scripts/login.js' %}" type="text/javascript"></script>
+{% endblock extra_head %}
