--- a/ArcsSystem/templates/socialaccount/snippets/provider_list.html
+++ b/ArcsSystem/templates/socialaccount/snippets/provider_list.html
@@ -5,16 +5,17 @@
 {% for provider in socialaccount_providers %}
 {% if provider.id == "openid" %}
 {% for brand in provider.get_brands %}
-<li>
-  <a title="{{brand.name}}" 
-     class="socialaccount_provider {{provider.id}} {{brand.id}}" 
-     href="{% provider_login_url provider.id openid=brand.openid_url process=process %}"
-     >{{brand.name}}</a>
-</li>
+<div class="row ">
+    <div class="col">
+        <a class="btn btn-outline-dark socialaccount_provider {{provider.id}} {{brand.id}}" href="{% provider_login_url provider.id openid=brand.openid_url process=process %}" role="button">{{brand.name}}</a>
+    </div>
+</div>
+
 {% endfor %}
 {% endif %}
-<li>
-  <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
-</li>
+<div class="row">
+    <div class="col">
+        <a class="btn btn-outline-dark socialaccount_provider {{provider.id}}" href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}" role="button">{{provider.name}}</a>
+    </div>
+</div>
 {% endfor %}
