--- a/ArcsSystem/templates/home.html
+++ b/ArcsSystem/templates/home.html
@@ -11,11 +11,11 @@
   </section>
 
   <section id="projects">
-    <h1>projects</h1>
+    <h1>Projects</h1>
   </section>
 
   <section id="papers">
-    <h1>papers</h1>
+    <h1>Papers</h1>
   </section>
 
   <section id="data-quality">
