fix alt tag string syntax

--- a/ArcsSystem/templates/projects/project_list.html
+++ b/ArcsSystem/templates/projects/project_list.html
@@ -64,7 +64,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <img class="mg-fluid w-100" src="{{project.image_dir}}" alt="{% trans "Responsive image" %}"/>
+                    <img class="mg-fluid w-100" src="{{project.image_dir}}" alt="{% trans 'Responsive image' %}"/>
                 </div>
             </div>
             <div class="row Lato-font project-items-justify">
