--- a/ArcsSystem/templates/staticpages/main-page.html
+++ b/ArcsSystem/templates/staticpages/main-page.html
@@ -14,7 +14,7 @@
         <div class="col">
             <div class="row">
                 <div class="col">
-                    <img class="img-fluid" src="{% static "devplaceholder/sami-takarautio-UZOpP-YHe9Q-unsplash.jpg"%}" alt="{% trans "" %}"/>
+                    <img class="img-fluid" src="{% static "devplaceholder/sami-takarautio-UZOpP-YHe9Q-unsplash.jpg"%}" alt="{% trans '' %}"/>
                 </div>
             </div>
             <div class="row">
@@ -43,13 +43,13 @@
                         </ol>
                       <div class="carousel-inner">
                         <div class="carousel-item active">
-                          <img class="d-block w-100" src="{% static "devplaceholder/blake-carpenter-JYMCHXVyUqQ-unsplash.jpg" %}" alt="{% trans "First slide" %}">
+                          <img class="d-block w-100" src="{% static "devplaceholder/blake-carpenter-JYMCHXVyUqQ-unsplash.jpg" %}" alt="{% trans 'First slide' %}">
                         </div>
                         <div class="carousel-item">
-                          <img class="d-block w-100" src="{% static "devplaceholder/hobby-5114150_1920.jpg" %}" alt="{% trans "Second slide" %}">
+                          <img class="d-block w-100" src="{% static "devplaceholder/hobby-5114150_1920.jpg" %}" alt="{% trans 'Second slide' %}">
                         </div>
                         <div class="carousel-item">
-                          <img class="d-block w-100" src="{% static "devplaceholder/library-438389_1920.jpg" %}" alt="{% trans "Third slide" %}">
+                          <img class="d-block w-100" src="{% static "devplaceholder/library-438389_1920.jpg" %}" alt="{% trans 'Third slide' %}">
                         </div>
                       </div>
                       <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
