--- a/ArcsSystem/templates/staticpages/static_variant2.html
+++ b/ArcsSystem/templates/staticpages/static_variant2.html
@@ -28,7 +28,7 @@
                 <div class="col">
                     <h2 font-weight-bold text-header-style > {{ object.title }}</h2>
                     <p > Publication Date: {{object.published}}</p>
-                    <img class="img-fluid" src="{% static "devplaceholder/library-863148_1920.jpg" %}" alt="{% trans "" %}"/>
+                    <img class="img-fluid" src="{% static "devplaceholder/library-863148_1920.jpg" %}" alt="{% trans '' %}"/>
                     <br>
                     <p> {{ object.content }} </p>
                 </div>
@@ -72,7 +72,7 @@
             <div class="row visual-Mindmap-style">
                 <div class="col">
                     <h4 class="text-header-visual-mindmap"> Explore Visual - Mindmap </h4>
-                    <img class="img-fluid" src="{% static "devplaceholder/open-book-1428428_1920.jpg" %}" alt="{% trans "" %}"/>
+                    <img class="img-fluid" src="{% static "devplaceholder/open-book-1428428_1920.jpg" %}" alt="{% trans '' %}"/>
                 </div>
             </div>
             <div class="row visual-Mindmap-style">
