--- a/ArcsSystem/templates/account/password_reset.html
+++ b/ArcsSystem/templates/account/password_reset.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load account %}
+{% load static %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
@@ -12,11 +13,11 @@
         <div class="col">
             <div class="row">
                 <div class="col d-flex justify-content-center align-items-center">
-                    <h1>{% trans "Password Reset" %}</h1>
+                    <h1 class="Helvetica-font">{% trans "Password Reset" %}</h1>
                 </div>
             </div>
             <div class="row">
-                <div class="col d-flex justify-content-center align-items-center">
+                <div class="col Helvetica-font d-flex justify-content-center align-items-center">
                     {% if user.is_authenticated %}
                     {% include "account/snippets/already_logged_in.html" %}
                     {% endif %}
@@ -26,15 +27,15 @@
             </div>
             <div class="row">
                 <div class="col d-flex justify-content-center align-items-center">
-                    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset password-reset-form">
                         {% csrf_token %}
                         {{ form.as_p }}
-                        <input type="submit" value="{% trans 'Reset My Password' %}" />
+                        <input id="password-reset-btn" type="submit" value="{% trans 'Reset My Password' %}" />
                     </form>
                 </div>
             </div>
             <div class="row">
-                <div class="col d-flex justify-content-center align-items-center">
+                <div class="col Helvetica-font d-flex justify-content-center align-items-center">
                     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
                 </div>
             </div>
@@ -46,3 +47,6 @@
 
 
 {% endblock %}
+{% block extra_head %}
+<script src="{% static 'scripts/reset-password.js' %}" type="text/javascript"></script>
+{% endblock extra_head %}
